expense-yaml/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-frontend
  labels:
    app: frontend
    tier: application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
      tier: application
  template:
    metadata:
      labels:
        app: frontend
        tier: application
    spec:
      containers:
        - name: dev-frontend
          image: "siva9666/expense-frontend:node"
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: 128Mi
              cpu: 30m
            limits:
              memory: 256Mi
              cpu: 60m
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
          volumeMounts:
            - name: dev-frontend
              mountPath: /etc/nginx/nginx.conf
              subPath: NGINX_CONF
      volumes:
        - name: dev-frontend
          configMap:
            name: dev-frontend
