expense-yaml/frontend/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
    project: expense
spec:
  type: ClusterIP
  selector:
    app: frontend
    project: expense
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
