expense-yaml/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: expense-yaml
  labels:
    app: frontend
    tier: web
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: "ullagallu-konka"
    alb.ingress.kubernetes.io/group.name: "ullagallu"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/tags: "Environment=dev,Team=frontend"
    alb.ingress.kubernetes.io/group.order: '10'
    alb.ingress.kubernetes.io/healthcheck-path: '/'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:ap-south-1:522814728660:certificate/9bfb2029-8335-459b-9603-a814f500f774"
    alb.ingress.kubernetes.io/ssl-policy: 'ELBSecurityPolicy-2016-08'
    alb.ingress.kubernetes.io/actions.ssl-redirect: >
      {"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301" }}
    external-dns.alpha.kubernetes.io/hostname: 'expense-dev.bapatlas.site'
    external-dns.alpha.kubernetes.io/ttl: '60'
spec:
  ingressClassName: alb
  rules:
    - host: "expense-dev.bapatlas.site"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
